--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-	
-  <head>
-    <title>Memory Game</title>
-  </head>
-  
-    <nav class="clearfix">
-      <a href="#">Instructions</a>
-      <a href="#">Game</a>
-    </nav>
-    
-    <body>
-    	<h1>Memory Game</h1>
-    	<h2>Instructions</h2>
-    	<p>
-    		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are         flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
-    	</p>
-    	
-    	<div class="board">
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-  	</div>
-  
-  	<footer>
-  		Created with &hearts; by <span class="name">GA</span>
-	</footer>
-
-     </body>
+<html>
+<style>
 
 
+</style>
+<head>
+	<title>Memory Game</title>
+	<link rel="stylesheet" type="text/css" href="reset.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src ="main.js"></script>
+</head>
+<body>
+  <nav class="clearfix">
+  	<ul>
+  		<li><a href="#">Instructions</a></li>
+  		<li><a href="#">Game</a></li>
+  	</ul>
+  </nav>
+<h1>Memory Game</h1>
+  <p><a href="www.unicodeunicorn.com">Look at my portfolio</a> page</p>
+  <p><a href="mailto:burke.leo@gmail.com">Email</a> me</p>
+
+<h2>Instructions</h2>
+<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p></hr>
+  <div class="board">
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+</div>
+
+<footer>Created with <span id="name">♥</span> by <span id="name">Leo Burke</span></footer>
+</body>
 </html>
