--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,9 +6,10 @@
 </style>
 <head>
 	<title>Memory Game</title>
+
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src ="main.js"></script>
+
 </head>
 <body>
   <nav class="clearfix">
@@ -23,10 +24,14 @@
 
 <h2>Instructions</h2>
 <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p></hr>
+  <button id="startButton">Create Board</button>
   <div id="gameboard" class="board">
 
 </div>
 
 <footer>Created with <span id="name">♥</span> by <span id="name">Leo Burke</span></footer>
+
+  <script src ="main.js"></script>
 </body>
+
 </html>
