--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,7 +6,8 @@
 </style>
 <head>
 	<title>Memory Game</title>
-
+	<meta charset="UTF-8"> 
+	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 
@@ -24,7 +25,7 @@
 
 <h2>Instructions</h2>
 <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p></hr>
-  <button id="startButton">Create Board</button>
+
   <div id="gameboard" class="board">
 
 </div>
